feat: 평일 비상 근무 순번대로 사원 닉네임을 입력받는 기능 구현